2008-05-01  Oliver Hunt  <oliver@apple.com>

        Reviewed by Maciej.

        Bug 18827: SquirrelFish: Prevent getters and setters from destroying the current RegisterFile
        <https://bugs.webkit.org/show_bug.cgi?id=18827>
        
        This patch makes getters and setters work.  It does this by
        tracking whether the RegisterFile is "safe", that is whether
        the interpreter is in a state that in which it can handle
        the RegisterFile being reallocated.

        * VM/Machine.cpp:
        (KJS::resolve):
        (KJS::Machine::privateExecute):
        * VM/RegisterFile.h:
        * kjs/function.cpp:
        (KJS::FunctionImp::callAsFunction):

2008-04-30  Geoffrey Garen  <ggaren@apple.com>

        Release build fix: Always compile in "isGlobalObject", since it's
        listed in our .exp file.

        * kjs/ExecState.cpp:
        (KJS::ExecState::isGlobalObject):
        * kjs/ExecState.h:

2008-04-30  Oliver Hunt  <oliver@apple.com>

        Reviewed by Maciej.

        Minor code restructuring to prepare for getters and setters, 
        also helps exception semantics a bit.

        * VM/Machine.cpp:
        (KJS::Machine::privateExecute):

2008-04-30  Geoffrey Garen  <ggaren@apple.com>

        Fixed tyop.

        * kjs/ExecState.h:

2008-04-30  Geoffrey Garen  <ggaren@apple.com>

        Debug build fix: export a missing symbol.

        * JavaScriptCore.exp:

2008-04-30  Geoffrey Garen  <ggaren@apple.com>

        Reviewed by Oliver Hunt.
        
        A little more ExecState refactoring: Now, only the global object creates
        an ExecState.
        
        Also inlined ExecState::lexicalGlobalObject().
        
        SunSpider reports no change.

2008-04-30  Geoffrey Garen  <ggaren@apple.com>

        WebCore build fix: forward-declare ScopeChain.

        * kjs/interpreter.h:

2008-04-30  Geoffrey Garen  <ggaren@apple.com>

        Build fix for JavaScriptGlue: export a missing symbol.
