@@ -713,7 +713,7 @@ JSValue* Machine::privateExecute(ExecutionFlag flag, ExecState* exec, RegisterFi
     Instruction* vPC = codeBlock->instructions.begin();
     JSValue** k = codeBlock->jsValues.data();
     
-    registerFile->setUnsafeForReentry(true);
+    registerFile->setSafeForReentry(false);
 #define VM_CHECK_EXCEPTION() \
      do { \
         if (UNLIKELY(exec->hadException())) { \
@@ -1420,9 +1420,9 @@ JSValue* Machine::privateExecute(ExecutionFlag flag, ExecState* exec, RegisterFi
             int thisRegister = (codeBlock->codeType == FunctionCode) ? -(codeBlock->numVars + codeBlock->numParameters) : ProgramCodeThisRegister;
             JSObject* thisObject = r[thisRegister].u.jsObject;
 
-            registerFile->setUnsafeForReentry(false);
+            registerFile->setSafeForReentry(true);
             JSValue* result = eval(exec, thisObject, scopeChain, registerFile, r, argv, argc, exceptionValue);
-            registerFile->setUnsafeForReentry(true);
+            registerFile->setSafeForReentry(false);
             r = (*registerBase) + registerOffset;
 
             if (exceptionValue)
@@ -1493,9 +1493,9 @@ JSValue* Machine::privateExecute(ExecutionFlag flag, ExecState* exec, RegisterFi
 
             List args(&r[argv + 1].u.jsValue, argc - 1);
 
-            registerFile->setUnsafeForReentry(false);
+            registerFile->setSafeForReentry(true);
             JSValue* returnValue = static_cast<JSObject*>(v)->callAsFunction(exec, thisObj, args);
-            registerFile->setUnsafeForReentry(true);
+            registerFile->setSafeForReentry(false);
 
             r = (*registerBase) + registerOffset;
             r[r0].u.jsValue = returnValue;
@@ -1597,9 +1597,9 @@ JSValue* Machine::privateExecute(ExecutionFlag flag, ExecState* exec, RegisterFi
             int registerOffset = r - (*registerBase);
 
             List args(&r[argv + 1].u.jsValue, argc - 1);
-            registerFile->setUnsafeForReentry(false);
+            registerFile->setSafeForReentry(true);
             JSValue* returnValue = constructor->construct(exec, args);
-            registerFile->setUnsafeForReentry(true);
+            registerFile->setSafeForReentry(false);
         
             r = (*registerBase) + registerOffset;
             VM_CHECK_EXCEPTION();
